# biocentral_api

./: .gitignore  README.md
dart/: .openapi-generator-ignore  CHANGELOG.md  README.md  pubspec.yaml
dart/.openapi-generator/: FILES
dart/lib/: biocentral_api.dart
dart/test/: add_embeddings_request_test.dart  add_embeddings_response_test.dart  auto_detect_format_request_test.dart  auto_eval_progress_test.dart  bayesian_optimization_api_test.dart  bayesian_optimization_request_test.dart  biocentral_api_test.dart  biocentral_server_custom_models_endpoint_models_error_response_test.dart  biocentral_server_server_management_shared_endpoint_models_error_models_error_response_test.dart  biotrainer_sequence_record_test.dart  config_option_test.dart  config_options_response_test.dart  config_verification_request_test.dart  config_verification_response_test.dart  custom_models_api_test.dart  default_api_test.dart  detected_format_response_test.dart  embed_request_test.dart  embeddings_api_test.dart  epoch_metrics_test.dart  get_missing_embeddings_request_test.dart  get_projection_config_response_test.dart  (+38 more)
generate/: client_generation.md  generate.py  openapi.json
python/: .openapi-generator-ignore  README.md  pyproject.toml
python/examples/exotox_reproduction/: README.md  exotox.onnx  exotox_conversion.ipynb  exotox_reproduction.ipynb  exotox_utils.py  pyproject.toml
python/examples/exotox_reproduction/exotox_files/: X_test_SST30.fasta  X_train_SST30.fasta  classifying_unknown_proteins.py  sklearn_svcPC20_SST30_CV10_embeddingsProtT5  y_test_SST30.csv  y_train_SST30.csv
(+507 files in other folders)
